Cleaning up and optimizing images

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -8,7 +8,7 @@
         %h4 You set up the tasks
 
       .panel-body.text-center
-        %img(src="assets/tasks.png" class="img-responsive")
+        = image_tag "tasks.png", class: "img-responsive"
 
   .col-md-4
     .panel.panel-default
@@ -16,7 +16,7 @@
         %h4 Your child records them daily
 
       .panel-body.text-center
-        %img(src="assets/recording.png" class="img-responsive")
+        = image_tag "recording.png", class: "img-responsive"
 
   .col-md-4
     .panel.panel-default
@@ -24,7 +24,7 @@
         %h4 Then you get an invoice!
 
       .panel-body.text-center
-        %img(src="assets/invoice.png" class="img-responsive")
+        = image_tag "invoice.png", class: "img-responsive"
 
   .clearfix
 
