Adding google verification meta tag

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     %meta(name="viewport" content="width=device-width, initial-scale=1")
     %meta(name="author" content="Catamorphic Labs, LLC")
     %meta(name="description" content="Childwork - teach your children the value of work!")
+    %meta(name="google-site-verification" content="yAHmIhAazreDpctgnUd6EIaCycGbCAdFQyxNnJHyDPs")
     = csrf_meta_tags
 
     %title Childwork &mdash; teach your children the value of work!
